# tire-ocr

./: .dockerignore  .gitignore  AiPipeline.sln  LICENSE  README.md  TireOcr.sln
.github/workflows/: docker-build.yaml
AiPipeline.Orchestration.Contracts.Tests/: AiPipeline.Orchestration.Contracts.Tests.csproj  ApElementSerializationDeserializationTests.cs  TestUtils.cs
deploy/: build-images.sh  docker-compose.yaml  push-images.sh
deploy/evaluation-framework/: build-images.sh  docker-compose.yaml  push-images.sh
deploy/evaluation-tool/: build-images.sh  docker-compose.yaml  push-images.sh
deploy/opencvsharp/: Dockerfile  build.sh  publish.sh
deploy/prototype/: build-images.sh  push-images.sh
docs/: mkdocs.yml
docs/docs/: ap-scheme.md  architecture.md  index.md  node-creation-2.md  orchestration-runner.md  running-pipelines.md
src/AiPipeline.AppHost/: AiPipeline.AppHost.csproj  Program.cs
src/AiPipeline.Orchestration/AiPipeline.Orchestration.Contracts.Tests/: AiPipeline.Orchestration.Contracts.Tests.csproj  ApElementSerializationDeserializationTests.cs
src/AiPipeline.Orchestration/AiPipeline.Orchestration.Shared/: AiPipeline.Orchestration.Shared.csproj  MessagingConstants.cs
src/AiPipeline.Orchestration/AiPipeline.Orchestration.Shared.Tests/: AiPipeline.Orchestration.Shared.Tests.csproj  ApElementSerializationDeserializationTests.cs  TestUtils.cs
src/AiPipeline.ServiceDefaults/: AiPipeline.ServiceDefaults.csproj  Extensions.cs  HttpClientBuilderExtension.cs
src/AiPipeline.Shared/: AiPipeline.Shared.csproj
src/AiPipeline.Shared/Domain/: ValueObject.cs
src/AiPipeline.Shared/Exceptions/: HttpRequestExceptionWithContent.cs
src/AiPipeline.Shared/Extensions/: PerformanceUtils.cs  ValidationExtension.cs
src/AiPipeline.Shared/Pagination/: PaginatedCollection.cs  Pagination.cs
src/AiPipeline.Shared/Persistence/: IEntityRepository.cs  IRepository.cs
src/AiPipeline.Shared/Result/: DataResult.cs  Failure.cs  FailureMessages.cs  Result.cs  ResultExtension.cs  ResultFailureException.cs
src/AiPipeline.Shared/UseCase/: ICommandHandler.cs  IQuery.cs
src/AiPipeline.TireOcr.DbMatcher/AiPipeline.TireOcr.DbMatcher.Application/: AiPipeline.TireOcr.DbMatcher.Application.csproj  DependencyInjection.cs
src/AiPipeline.TireOcr.DbMatcher/AiPipeline.TireOcr.DbMatcher.Infrastructure/: AiPipeline.TireOcr.DbMatcher.Infrastructure.csproj  DependencyInjection.cs
src/AiPipeline.TireOcr.DbMatcher/AiPipeline.TireOcr.DbMatcher.WebApi/: AiPipeline.TireOcr.DbMatcher.WebApi.csproj  DependencyInjection.cs  Dockerfile  Program.cs
src/AiPipeline.TireOcr.EvaluationTool.Ui/: Dockerfile  index.html  nginx.conf  package.json
src/AiPipeline.TireOcr.EvaluationTool.Ui/src/: app.tsx  main.tsx
src/AiPipeline.TireOcr.EvaluationTool/AiPipeline.TireOcr.EvaluationTool.Domain/: AiPipeline.TireOcr.EvaluationTool.Domain.csproj
src/AiPipeline.TireOcr.EvaluationTool/AiPipeline.TireOcr.EvaluationTool.Infrastructure/: AiPipeline.TireOcr.EvaluationTool.Infrastructure.csproj  DependencyInjection.cs
src/AiPipeline.TireOcr.EvaluationTool/AiPipeline.TireOcr.EvaluationTool.WebApi/: AiPipeline.TireOcr.EvaluationTool.WebApi.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
src/AiPipeline.TireOcr.Ocr/AiPipeline.TireOcr.Ocr.Application/: AiPipeline.TireOcr.Ocr.Application.csproj
src/AiPipeline.TireOcr.Ocr/AiPipeline.TireOcr.Ocr.Domain/: AiPipeline.TireOcr.Ocr.Domain.csproj  (+1 more)
src/AiPipeline.TireOcr.PythonOcr/: Dockerfile  pyproject.toml
src/AiPipeline.TireOcr.PythonPreprocessing/: Dockerfile  main.py  pyproject.toml  run_batch_backup.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.OcrPaddle/: Dockerfile  main.py  pyproject.toml
src/AiPipeline.TireOcr/AiPipeline.TireOcr.OcrPaddle/src/: dependencies.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.OcrPaddle/src/application/services/: ocr_service.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.OcrPaddle/src/infrastructure/services/: paddle_ocr_service.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.OcrPaddle/src/web_api/endpoints/: ocr.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.PythonPreprocessing/: .gitignore  Dockerfile  main.py  pyproject.toml  run_batch_backup.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.PythonPreprocessing/models/unet_text_region/: tire_unet.onnx
src/AiPipeline.TireOcr/AiPipeline.TireOcr.PythonPreprocessing/src/: dependencies.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.PythonPreprocessing/src/application/commands/perform_preprocessing_3/: perform_preprocessing_3_command.py  perform_preprocessing_3_command_handler.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.PythonPreprocessing/src/application/commands/perform_preprocessing_4/: perform_preprocessing_4_command_handler.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.PythonPreprocessing/src/application/constants/: preprocessing_constants.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.PythonPreprocessing/src/application/dtos/: preprocessing_result_dto.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.PythonPreprocessing/src/application/services/: image_manipulation_service.py  image_segmentation_service.py  image_slicer_service.py  rim_detection_service.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.PythonPreprocessing/src/infrastructure/services/: image_manipulation_service_impl.py  image_segmentation_service_impl.py  image_slicer_service_impl.py  rim_detection_service_impl.py
src/AiPipeline.TireOcr/AiPipeline.TireOcr.PythonPreprocessing/src/web_api/endpoints/: preprocessing.py  preprocessing_v3.py
src/TireOcr.AppHost/: Program.cs  TireOcr.AppHost.csproj
src/TireOcr.RunnerPrototype/: DependencyInjection.cs  Dockerfile  TireOcr.RunnerPrototype.csproj
src/TireOcr.ServiceDefaults/: TireOcr.ServiceDefaults.csproj
src/TireOcr.Shared/: TireOcr.Shared.csproj
(+1635 files in other folders)
