[project]
name = "aipipeline-tireocr-pythonpreprocessing"
version = "0.1.0"
description = "Ocr rest api for interacting with python ocr libraries"
authors = [
    {name = "Michal Musil"}
]
license = {text = "CC BY-NC-SA 4.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "paddleocr (>=3.4.0,<4.0.0)",
    "paddlepaddle (>=3.3.0,<4.0.0)",
    "paddlex (>=3.4.1,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
