[project]
name = "aipipeline-tireocr-pythonpreprocessing"
version = "0.1.0"
description = "Ocr rest api for interacting with python ocr libraries"
authors = [
    {name = "Michal Musil"}
]
license = {text = "CC BY-NC-SA 4.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "paddleocr (>=3.4.0,<4.0.0)",
    "paddlepaddle (>=3.3.0,<4.0.0)",
    "paddlex (>=3.4.1,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "ultralytics (>=8.4.9,<9.0.0)",
    "onnx (>=1.20.1,<2.0.0)",
    "onnxruntime (>=1.23.2,<2.0.0)",
    "ml-dtypes (>=0.5.4,<0.6.0)",
    "humanfriendly (>=10.0,<11.0)",
    "flatbuffers (>=25.12.19,<26.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "imutils (>=0.5.4,<0.6.0)",
    "rectangle-packer (>=2.0.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
